Fix____SubscriberGuiAfterLogIn_HandleLogInInServer

--- a/Assignment3/ClientBistro/bin/gui/SubscriberLogin.fxml
+++ b/Assignment3/ClientBistro/bin/gui/SubscriberLogin.fxml
@@ -25,7 +25,7 @@
 
     <!-- Confirmation Code -->
     <Label text="Confirmation Code"/>
-    <TextField fx:id="confirmationCodeField"
+   <TextField fx:id="username"
                promptText="Enter Reservation Code" />
 
     <!-- Buttons -->
